--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -1597,14 +1597,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def impute_below_thresh(df: pd.DataFrame, target: str, thresh: Union[int, float] = 3.0) -> pd.DataFrame:\n",
+    "def impute_below_thresh(df: pd.DataFrame, target: str, threshold: Union[int, float] = 3.0) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Impute values in the target column below the threshold with the mean.\n",
     "    \n",
     "    Args:\n",
     "        df (pd.DataFrame): The DataFrame to be transformed.\n",
     "        target (str): The target column for imputation.\n",
-    "        thresh (Union[int, float]): The threshold below which values will be imputed with the mean.\n",
+    "        threshold (Union[int, float]): The threshold below which values will be imputed with the mean.\n",
     "\n",
     "    Returns:\n",
     "        pd.DataFrame: The transformed DataFrame with values in the target column below the threshold imputed with the mean.\n",
@@ -1612,12 +1612,12 @@
     "    if target in df.columns:\n",
     "        try:\n",
     "            # Calculate the mean of the target column excluding the values below the threshold\n",
-    "            mean_value = df[df[target] >= thresh][target].mean()\n",
+    "            mean_value = df[df[target] >= threshold][target].mean()\n",
     "            \n",
     "            # Identify and impute values below the threshold with the calculated mean\n",
-    "            df.loc[df[target] < thresh, target] = mean_value\n",
+    "            df.loc[df[target] < threshold, target] = mean_value\n",
     "            \n",
-    "            print(f\"Values in '{target}' below {thresh} imputed with mean: {mean_value:.2f}\")\n",
+    "            print(f\"Values in '{target}' below {threshold} imputed with mean: {mean_value:.2f}\")\n",
     "        except Exception as e:\n",
     "            print(f\"Error during imputation: {e}\")\n",
     "    else:\n",
@@ -1661,7 +1661,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "impute_windspeed_transformer = CustomTransformer(function=impute_below_thresh, config={\"target\": \"windspeed\", \"thresh\": 0.0})\n",
+    "impute_windspeed_transformer = CustomTransformer(function=impute_below_thresh, config={\"target\": \"windspeed\", \"threshold\": 0.0})\n",
     "\n",
     "weekday_by_date = CustomTransformer(function=process_weekday, config={\"target\": \"weekday\", \"date\": \"dteday\"})\n",
     "\n",
@@ -2232,24 +2232,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "'break' outside loop (668683560.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[54], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    break\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'break' outside loop\n"
-     ]
-    }
-   ],
-   "source": [
-    "break"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2349,15 +2331,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "remove_outliers_transformer = CustomTransformer(function=impute_outliers_with_mean, config={\"target\": [\"cnt\",\"casual\"]})\n",
+    "remove_outliers = CustomTransformer(function=impute_outliers_with_mean, config={\"target\": [\"cnt\", \"casual\"]})\n",
     "\n",
-    "drop_feature_01 = CustomTransformer(function=drop_features, config={\"columns\": [\"cnt\", \"casual\", \"registered\"]})\n",
-    "\n",
+    "remove_outliers_pipeline = Pipeline([\n",
+    "    (\"remove_outliers\", remove_outliers)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_outliers_removed = remove_outliers_pipeline.fit_transform(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_outliers_removed.head().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data_outliers_removed.describe().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pipeline = Pipeline([\n",
     "    (\"missing_value_pipeline\", missing_value_pipeline),\n",
     "    (\"data_correction_pipeline\", data_correction_pipeline),\n",
-    "    (\"remove_outliers\", remove_outliers_transformer),\n",
-    "    (\"drop_feature_01\", drop_feature_01),\n",
     "    (\"minimal_pipeline\", minimal_pipeline)])"
    ]
   },
