added adj_r2 and rmse measures

--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -35,7 +35,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "from sklearn.metrics import r2_score, mean_absolute_error\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "\n",
     "%matplotlib inline"
@@ -63,27 +63,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def performance_measures(y_true, y_pred) -> tuple:\n",
+    "def performance_measures(y_true, y_pred, n_predictors) -> tuple:\n",
     "    \"\"\"\n",
-    "    Calculate R2 and MAE\n",
+    "    Calculate R2, Adjusted R2, and MAE\n",
     "    \n",
     "    Args:\n",
-    "        y_true: array-like\n",
-    "        True values\n",
-    "        y_pred: array-like\n",
-    "        Predicted values\n",
+    "        y_true: array-like, True values\n",
+    "        y_pred: array-like, Predicted values\n",
+    "        n_predictors: int, number of predictors used in the model excluding the intercept\n",
     "        \n",
     "    Returns:\n",
-    "        r2: float\n",
-    "        R2 score\n",
-    "        mae: float\n",
-    "        Mean Absolute Error\n",
+    "        r2: float, R2 score\n",
+    "        adjusted_r2: float, Adjusted R2 score\n",
+    "        mae: float, Mean Absolute Error\n",
     "    \"\"\"\n",
+    "    n = len(y_true)  # Number of observations\n",
     "    r2 = r2_score(y_true, y_pred)\n",
     "    mae = mean_absolute_error(y_true, y_pred)\n",
+    "    adjusted_r2 = 1 - ((1 - r2) * (n - 1) / (n - n_predictors - 1))\n",
+    "    rmse = mean_squared_error(y_true, y_pred, squared=False)\n",
+    "    \n",
+    "    measures = {\n",
+    "        \"R2\": r2,\n",
+    "        \"Adjusted_R2\": adjusted_r2,\n",
+    "        \"MAE\": mae,\n",
+    "        \"RMSE\": rmse\n",
+    "    }\n",
+    "\n",
     "    print(f\"R2: {r2:.2f}\")\n",
+    "    print(f\"Adjusted R2: {adjusted_r2:.2f}\")\n",
     "    print(f\"MAE: {mae:.2f}\")\n",
-    "    return r2, mae"
+    "    print(f\"RMSE: {rmse:.2f}\")\n",
+    "    \n",
+    "    return measures\n"
    ]
   },
   {
@@ -809,12 +821,14 @@
      "output_type": "stream",
      "text": [
       "R2: 0.22\n",
-      "MAE: 1322.63\n"
+      "Adjusted R2: 0.13\n",
+      "MAE: 1322.63\n",
+      "RMSE: 4153.23\n"
      ]
     }
    ],
    "source": [
-    "_, _ = performance_measures(y_validate, y_pred)"
+    "measures = performance_measures(y_validate, y_pred, X_train.shape[1])"
    ]
   },
   {
@@ -1027,13 +1041,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_659104/208495991.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/208495991.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = pd.to_datetime(df[target], format=date_format)\n",
-      "/tmp/ipykernel_659104/2224586021.py:24: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/2224586021.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1524,12 +1538,14 @@
      "output_type": "stream",
      "text": [
       "R2: 0.22\n",
-      "MAE: 1316.62\n"
+      "Adjusted R2: 0.13\n",
+      "MAE: 1316.62\n",
+      "RMSE: 4149.17\n"
      ]
     }
    ],
    "source": [
-    "_, _ = performance_measures(y_validate, y_pred)"
+    "measures = performance_measures(y_validate, y_pred, X_train.shape[1])"
    ]
   },
   {
@@ -1735,19 +1751,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_659104/208495991.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/208495991.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = pd.to_datetime(df[target], format=date_format)\n",
-      "/tmp/ipykernel_659104/2224586021.py:24: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/2224586021.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = df[date].apply(get_season)\n",
-      "/tmp/ipykernel_659104/3999800440.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/3999800440.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2231,12 +2247,14 @@
      "output_type": "stream",
      "text": [
       "R2: 0.29\n",
-      "MAE: 991.92\n"
+      "Adjusted R2: 0.20\n",
+      "MAE: 991.92\n",
+      "RMSE: 3333.69\n"
      ]
     }
    ],
    "source": [
-    "_, _ = performance_measures(y_validate, y_pred)"
+    "measures = performance_measures(y_validate, y_pred, X_train.shape[1])"
    ]
   },
   {
@@ -3151,19 +3169,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_659104/208495991.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/208495991.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = pd.to_datetime(df[target], format=date_format)\n",
-      "/tmp/ipykernel_659104/2224586021.py:24: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/2224586021.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = df[date].apply(get_season)\n",
-      "/tmp/ipykernel_659104/3999800440.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/3999800440.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -3647,12 +3665,14 @@
      "output_type": "stream",
      "text": [
       "R2: 0.85\n",
-      "MAE: 637.68\n"
+      "Adjusted R2: 0.83\n",
+      "MAE: 637.68\n",
+      "RMSE: 759.06\n"
      ]
     }
    ],
    "source": [
-    "_, _ = performance_measures(y_validate, y_pred)"
+    "measures = performance_measures(y_validate, y_pred, X_train.shape[1])"
    ]
   },
   {
@@ -3761,19 +3781,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_659104/208495991.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/208495991.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = pd.to_datetime(df[target], format=date_format)\n",
-      "/tmp/ipykernel_659104/2224586021.py:24: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/2224586021.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = df[date].apply(get_season)\n",
-      "/tmp/ipykernel_659104/3999800440.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/3999800440.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -4456,12 +4476,14 @@
      "output_type": "stream",
      "text": [
       "R2: 0.89\n",
-      "MAE: 516.80\n"
+      "Adjusted R2: 0.86\n",
+      "MAE: 516.80\n",
+      "RMSE: 654.90\n"
      ]
     }
    ],
    "source": [
-    "_, _ = performance_measures(y_validate, y_pred)"
+    "measures = performance_measures(y_validate, y_pred, X_train.shape[1])"
    ]
   },
   {
@@ -4550,19 +4572,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_659104/208495991.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/208495991.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = pd.to_datetime(df[target], format=date_format)\n",
-      "/tmp/ipykernel_659104/2224586021.py:24: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/2224586021.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = df[date].apply(get_season)\n",
-      "/tmp/ipykernel_659104/3999800440.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/3999800440.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -5245,12 +5267,14 @@
      "output_type": "stream",
      "text": [
       "R2: 0.89\n",
-      "MAE: 516.80\n"
+      "Adjusted R2: 0.86\n",
+      "MAE: 516.80\n",
+      "RMSE: 654.90\n"
      ]
     }
    ],
    "source": [
-    "_, _ = performance_measures(y_validate, y_pred)"
+    "measures = performance_measures(y_validate, y_pred, X_train.shape[1])"
    ]
   },
   {
@@ -5341,19 +5365,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_659104/208495991.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/208495991.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = pd.to_datetime(df[target], format=date_format)\n",
-      "/tmp/ipykernel_659104/2224586021.py:24: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/2224586021.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = df[date].apply(get_season)\n",
-      "/tmp/ipykernel_659104/3999800440.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/3999800440.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -6013,12 +6037,14 @@
      "output_type": "stream",
      "text": [
       "R2: 0.89\n",
-      "MAE: 511.00\n"
+      "Adjusted R2: 0.87\n",
+      "MAE: 511.00\n",
+      "RMSE: 638.94\n"
      ]
     }
    ],
    "source": [
-    "_, _ = performance_measures(y_validate, y_pred)"
+    "measures = performance_measures(y_validate, y_pred, X_train.shape[1])"
    ]
   },
   {
@@ -6099,19 +6125,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_659104/208495991.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/208495991.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = pd.to_datetime(df[target], format=date_format)\n",
-      "/tmp/ipykernel_659104/2224586021.py:24: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/2224586021.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = df[date].apply(get_season)\n",
-      "/tmp/ipykernel_659104/3999800440.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/3999800440.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -6748,12 +6774,14 @@
      "output_type": "stream",
      "text": [
       "R2: 0.89\n",
-      "MAE: 506.23\n"
+      "Adjusted R2: 0.87\n",
+      "MAE: 506.23\n",
+      "RMSE: 647.01\n"
      ]
     }
    ],
    "source": [
-    "_, _ = performance_measures(y_validate, y_pred)"
+    "measures = performance_measures(y_validate, y_pred, X_train.shape[1])"
    ]
   },
   {
@@ -7284,19 +7312,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_659104/208495991.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/208495991.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = pd.to_datetime(df[target], format=date_format)\n",
-      "/tmp/ipykernel_659104/2224586021.py:24: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/2224586021.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = df[date].apply(get_season)\n",
-      "/tmp/ipykernel_659104/3999800440.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/3999800440.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -7882,19 +7910,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_659104/208495991.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/208495991.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = pd.to_datetime(df[target], format=date_format)\n",
-      "/tmp/ipykernel_659104/2224586021.py:24: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/2224586021.py:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df[target] = df[date].apply(get_season)\n",
-      "/tmp/ipykernel_659104/3999800440.py:13: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_715284/3999800440.py:13: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -8531,12 +8559,14 @@
      "output_type": "stream",
      "text": [
       "R2: 0.80\n",
-      "MAE: 645.01\n"
+      "Adjusted R2: 0.77\n",
+      "MAE: 645.01\n",
+      "RMSE: 868.79\n"
      ]
     }
    ],
    "source": [
-    "_, _ = performance_measures(test_data_outliers_removed[\"cnt\"], y_pred)"
+    "measures = performance_measures(test_data_outliers_removed[\"cnt\"], y_pred, X_train.shape[1])"
    ]
   },
   {
@@ -8645,12 +8675,14 @@
      "output_type": "stream",
      "text": [
       "R2: 0.80\n",
-      "MAE: 645.01\n"
+      "Adjusted R2: 0.77\n",
+      "MAE: 645.01\n",
+      "RMSE: 868.79\n"
      ]
     }
    ],
    "source": [
-    "_, _ = performance_measures(y_test, y_pred)"
+    "measures = performance_measures(y_test, y_pred, X_test.shape[1])"
    ]
   },
   {
@@ -8751,12 +8783,14 @@
      "output_type": "stream",
      "text": [
       "R2: 0.89\n",
-      "MAE: 506.23\n"
+      "Adjusted R2: 0.87\n",
+      "MAE: 506.23\n",
+      "RMSE: 647.01\n"
      ]
     }
    ],
    "source": [
-    "_, _ = performance_measures(y_validate, y_pred)"
+    "measures = performance_measures(y_validate, y_pred, X_train.shape[1])"
    ]
   },
   {
