added header to task notebooks

--- a/project/Introduction-Data-Science-Task-1.ipynb
+++ b/project/Introduction-Data-Science-Task-1.ipynb
@@ -11,6 +11,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Lena Breitberg, Doreen Mack, David Riethmann"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1 Setup"
    ]
   },
