--- a/project/Introduction-Data-Science-Task-1.ipynb
+++ b/project/Introduction-Data-Science-Task-1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction Data Science Task 1"
+    "# Introduction-Data-Science Task 1"
    ]
   },
   {
