fixed exports task 2 started task 3

--- a/project/Introduction-Data-Science-Task-2.ipynb
+++ b/project/Introduction-Data-Science-Task-2.ipynb
@@ -2510,7 +2510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2526,18 +2526,23 @@
     "pickle.dump(final_model, open(model_filename, 'wb'))\n",
     "\n",
     "train_data_filename = '../data/train_data_task2.csv'\n",
-    "train_data = pd.concat([X_train, y_train], axis=1)\n",
-    "train_data.to_csv(train_data_filename, index=False)\n",
+    "X_train.to_csv(train_data_filename, index=False)\n",
     "\n",
     "validation_data_filename = '../data/validation_data_task2.csv'\n",
-    "validation_data = pd.concat([X_validate, y_validate], axis=1)\n",
-    "validation_data.to_csv(validation_data_filename, index=False)\n",
+    "X_validate.to_csv(validation_data_filename, index=False)\n",
     "\n",
     "test_data_filename = '../data/test_data_task2.csv'\n",
     "processed_test_data.to_csv(test_data_filename, index=False)\n",
     "\n",
     "print(\"All files saved successfully!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
