fixed bug in task 2 data export

--- a/project/Introduction-Data-Science-Task-2.ipynb
+++ b/project/Introduction-Data-Science-Task-2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2431,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2440,26 +2440,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "131 rows remaining after removing outliers.\n",
+      "118 rows remaining after removing outliers.\n",
+      "118 rows remaining after removing outliers.\n"
+     ]
+    }
+   ],
    "source": [
-    "feature_transformer = make_column_transformer(\n",
-    "    (OneHotEncoder(sparse_output=False, dtype=int), ['season', 'weekday', 'weathersit']),\n",
-    "    (SimpleImputer(strategy='mean'), ['hum']),\n",
-    "    ('drop', ['workingday', 'mnth', 'dteday', 'casual', 'registered']),\n",
-    "    remainder='passthrough'\n",
-    ")"
+    "test_data = outlier_remover.fit_transform(test_data)\n",
+    "X_validate = outlier_remover.fit_transform(X_validate)\n",
+    "y_validate = outlier_remover.fit_transform(y_validate.to_frame()).squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_processing_pipeline = make_pipeline(\n",
-    "    outlier_remover,\n",
     "    datetime_converter,\n",
     "    season_imputer,\n",
     "    correct_weekday,\n",
@@ -2475,30 +2481,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "596 rows remaining after removing outliers.\n",
-      "131 rows remaining after removing outliers.\n"
-     ]
-    }
-   ],
-   "source": [
-    "processed_train_data = data_processing_pipeline.fit_transform(train_data)\n",
-    "processed_test_data = data_processing_pipeline.fit_transform(test_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_validate, y_train, y_validate = train_test_split(processed_train_data, processed_train_data['cnt'], random_state=42, test_size=0.2)"
+    "processed_test_data = data_processing_pipeline.transform(test_data)\n",
+    "X_train = data_processing_pipeline.fit_transform(X_train)\n",
+    "X_validate = data_processing_pipeline.transform(X_validate)\n",
+    "y_train = y_train.to_frame()\n",
+    "y_validate = y_validate.to_frame()"
    ]
   },
   {
@@ -2510,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2532,17 +2523,11 @@
     "X_validate.to_csv(validation_data_filename, index=False)\n",
     "\n",
     "test_data_filename = '../data/test_data_task2.csv'\n",
-    "processed_test_data.to_csv(test_data_filename, index=False)\n",
+    "test_data = pd.concat([processed_test_data, test_data['cnt']], axis=1)\n",
+    "test_data.to_csv(test_data_filename, index=False)\n",
     "\n",
     "print(\"All files saved successfully!\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
